# My_projects

./: Bubyakina_Yuliya__lb1.pages  Bubyakina_Yuliya_lb2.pages  README.md  save.json
Battleship game/: lb3.docx  save.json
Battleship game/src/: BattleShipManager.cpp  BattleShipSegment.h  Orientation.h  main.cpp
Kitten Cards Game/: index.html  leaderboard.js  main.html  package-lock.json  package.json  server.js  styles.css
Kitten Cards Game/levels/: level1.json  level2.json  sprites.json
Kitten Cards Game/managers/: entityManager.js  eventManager.js  gameManager.js  mapManager.js  physicManager.js  soundManager.js  spriteManager.js
Social Network/: .babelrc  README.md  generate-ssl.js  gulpfile.js  package-lock.json  package.json  webpack.config.js
Social Network/data/: friends.json  news.json  users.json
home library/: books.json  copy-assets.js  package-lock.json  package.json  tsconfig.json
home_library/: r.md
src/: BattleField.cpp  BattleField.h  BattleFieldCell.cpp  BattleFieldCell.h  BattleShip.cpp  BattleShip.h  BattleShipManager.h  BattleShipSegment.cpp  CMakeLists.txt  Orientation.cpp  utils.cpp  utils.h
src/abilities/: AbilityFactory.h  AbilityManager.h  BombardmentFactory.cpp  BombardmentFactory.h  DoubleDamage.cpp  DoubleDamage.h  DoubleDamageFactory.cpp  Scaner.h  ScanerFactory.cpp
src/exceptions/: NoAbilitiesAvailable.h  ShipNearPosition.cpp  ShipNearPosition.h
src/game/: PvE.cpp  PvE.h
src/players/: Action.cpp  Bot.h  Player.h  User.cpp
src/serialization/: Deserialization.cpp  FileWrapper.cpp  Serialization.h
tetris/: ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  LEADERBOARD.md  NGINX_SETUP.md  README.md  TESTING_LEADERBOARD.md  THEME_GUIDE.md  index.html  main.html  package-lock.json  package.json  styles.css  theme.css  tsconfig.json
(+201 files in other folders)
